force-app/main/default/objects/Broadcast__c/Broadcast__c.object-meta.xml
<CustomObject>
    <label>Broadcast</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Broadcast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broadcasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>