force-app/main/default/objects/Broadcast__c/fields/All_Users__c.field-meta.xml
<CustomField>
    <fullName>All_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Users</label>
    <type>Checkbox</type>
</CustomField>