force-app/main/default/objects/Broadcast__c/fields/Message_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Message_End_Date__c</fullName>
    <label>Message End Date</label>
    <type>DateTime</type>
</CustomField>