force-app/main/default/objects/Broadcast__c/fields/Message_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Message_Start_Date__c</fullName>
    <label>Message Start Date</label>
    <type>DateTime</type>
</CustomField>