force-app/main/default/objects/Broadcast__c/fields/SOE__c.field-meta.xml
<CustomField>
    <fullName>SOE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOE</label>
    <referenceTo>SOE__c</referenceTo>
    <relationshipLabel>Broadcasts</relationshipLabel>
    <relationshipName>Broadcasts</relationshipName>
    <type>Lookup</type>
</CustomField>