force-app/main/default/objects/Broadcast__c/fields/This_SOE_Users__c.field-meta.xml
<CustomField>
    <fullName>This_SOE_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>This SOE Users</label>
    <type>Checkbox</type>
</CustomField>