force-app/main/default/objects/Broadcast__c/validationRules/Message_End_date_should_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Message_End_date_should_not_be_empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Message_End_Date__c)</errorConditionFormula>
    <errorMessage>Please enter End date</errorMessage>
</ValidationRule>