force-app/main/default/objects/Broadcast__c/validationRules/Message_should_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Message_should_not_be_empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Message__c)</errorConditionFormula>
    <errorMessage>Please enter Message</errorMessage>
</ValidationRule>