force-app/main/default/objects/Broadcast__c/validationRules/Message_Start_Date_Should_not_be_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Message_Start_Date_Should_not_be_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Message_Start_Date__c )</errorConditionFormula>
    <errorMessage>Please enter Start date</errorMessage>
</ValidationRule>