force-app/main/default/objects/Broadcast__c/validationRules/Select_SOE.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_SOE</fullName>
    <active>true</active>
    <description>Please select SOE .</description>
    <errorConditionFormula>AND( This_SOE_Users__c == True , All_Users__c == False, ISBLANK( SOE__c ) )</errorConditionFormula>
    <errorDisplayField>SOE__c</errorDisplayField>
    <errorMessage>If we select This SOE user. SOE is Requried</errorMessage>
</ValidationRule>