force-app/main/default/objects/Broadcast__c/validationRules/Start_date_must_be_Todays_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_must_be_Todays_date</fullName>
    <active>true</active>
    <errorConditionFormula>Message_Start_Date__c  &lt;  NOW()-0.0006945</errorConditionFormula>
    <errorMessage>Start date  must be  greater than or equal to Current time</errorMessage>
</ValidationRule>