force-app/main/default/objects/Broadcast__c/validationRules/Start_date_should_be_less_than_End_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_should_be_less_than_End_date</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Message_Start_Date__c  = Message_End_Date__c,Message_Start_Date__c  &gt; Message_End_Date__c)</errorConditionFormula>
    <errorMessage>End date  should be greater than Start date</errorMessage>
</ValidationRule>