force-app/main/default/objects/Broadcast__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Message__c</columns>
    <columns>Status__c</columns>
    <columns>Message_Start_Date__c</columns>
    <columns>Message_End_Date__c</columns>
    <columns>All_Users__c</columns>
    <columns>SOE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>