force-app/main/default/objects/Broadcast__c/listViews/Recent_Broadcasts.listView-meta.xml
<ListView>
    <fullName>Recent_Broadcasts</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Message_Start_Date__c</columns>
    <columns>Message_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Recent Broadcast</label>
</ListView>